# ai-shorts-factory

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
n8n/: Dockerfile
n8n/workflows/: w1_orchestrator.json  w2_content_generator.json  w3_video_composer.json  w4_publisher.json
output/: .gitkeep
scripts/: __init__.py  compose_video.py  config.py  constants.py  fetch_media.py  generate_image.py  generate_script.py  generate_voice.py  models.py  publish_video.py  subtitle_generator.py  voicevox_client.py  youtube_auth.py
scripts/prompts/: script_template.txt
scripts/utils/: __init__.py  api_client.py  file_handler.py  logger.py  retry.py
templates/: video_template.json
tests/: __init__.py  conftest.py  test_compose_video.py  test_fetch_media.py  test_file_handler.py  test_generate_image.py  test_generate_script.py  test_generate_voice.py  test_publish_video.py  test_retry.py  test_subtitle_generator.py  test_youtube_auth.py
