[project]
name = "ai-shorts-factory"
version = "0.1.0"
description = "AI動画自動生成パイプライン for YouTube Shorts / TikTok"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Shorts Factory Team"}
]
keywords = ["youtube", "shorts", "tiktok", "ai", "video", "automation"]

[project.urls]
Repository = "https://github.com/Y-Kanekoo/ai-shorts-factory"

# === Ruff（リンター・フォーマッター） ===
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "output",
    "n8n",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# === Mypy（型チェック） ===
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "venv",
    ".venv",
    "output",
    "n8n",
]

[[tool.mypy.overrides]]
module = [
    "moviepy.*",
    "whisper.*",
    "gradio_client.*",
    "huggingface_hub.*",
    "googleapiclient.*",
    "google.*",
    "google_auth_oauthlib.*",
    "PIL.*",
    "aiofiles.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# === Pytest（テスト） ===
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:moviepy.*:",
    "ignore::UserWarning:moviepy.*:",
]

# === Coverage（テストカバレッジ） ===
[tool.coverage.run]
source = ["scripts"]
branch = true
omit = [
    "scripts/__init__.py",
    "scripts/utils/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
fail_under = 50
show_missing = true
